# moetorrent

./: AGENTS.md  CHANGELOG.md  README.md  electron-builder.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: sync-version.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  transmission.rs
src/components/: file-drop-dialog-btn.tsx  file-tree-node.tsx  header.tsx  magnet-modal-btn.tsx  magnet-model-btn.tsx  magnet-window-content.tsx  sidebar.tsx  torrent-table.tsx  torrent-window-content.tsx
src/components/layout/: header.tsx
src/components/torrent/: file-tree-node.tsx  torrent-table.tsx
src/lib/: mock-data.ts  transmission.ts  utils.ts
src/types/: index.ts
src/views/: main-window.tsx  torrent-window.tsx
src/windows/: magnet-window.tsx  main-window.tsx  torrent-window.tsx
